Project1/force-app/main/default/objects/Supply_Request__c/Supply_Request__c.object-meta.xml
<CustomObject>
    <label>Supply Request</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Supply Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>