Project1/force-app/main/default/objects/Supply_Request__c/fields/Supply_amount__c.field-meta.xml
<CustomField>
    <fullName>Supply_amount__c</fullName>
    <label>Supply amount</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>SupplyRequest__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baguette</fullName>
            </value>
            <value>
                <fullName>Brioche</fullName>
            </value>
            <value>
                <fullName>Rye</fullName>
            </value>
            <value>
                <fullName>Sourdough</fullName>
            </value>
            <value>
                <fullName>Beef</fullName>
            </value>
            <value>
                <fullName>Steak</fullName>
            </value>
            <value>
                <fullName>Turkey</fullName>
            </value>
            <value>
                <fullName>Ham</fullName>
            </value>
            <value>
                <fullName>Coke Products</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Cups</fullName>
            </value>
            <value>
                <fullName>Plates</fullName>
            </value>
            <value>
                <fullName>Knifes/Forks/Spoons</fullName>
            </value>
            <value>
                <fullName>Bleach</fullName>
            </value>
            <value>
                <fullName>Windex</fullName>
            </value>
            <value>
                <fullName>Oxyclean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>