Project1/force-app/main/default/objects/Supply_Request__c/fields/SupplyRequest__c.field-meta.xml
<CustomField>
    <fullName>SupplyRequest__c</fullName>
    <label>SupplyRequest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RequestedSupply</valueSetName>
    </valueSet>
</CustomField>